[package]
name = "mungye"
version = "0.1.0"
authors = ["Armando Perez <gmandx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "^0.4.5"
toml = "^0.5"
json = "^0.12"
structopt = "^0.3"
itertools = "^0.10"
strum = "^0.21"
strum_macros = "^0.21"

[dev-dependencies]
test-case = "^1"
